解决了上传图片功能，修改前面的一些bug

--- a/src/main/resources/static/bootstrap3/css/bootstrap.css
+++ b/src/main/resources/static/bootstrap3/css/bootstrap.css
@@ -937,7 +937,7 @@ img {
   display: block;
   width: 100% \9;
   max-width: 100%;
-  height: auto;
+  height: 100px;
 }
 .img-rounded {
   border-radius: 6px;
